Update ServerStart.sh